--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@dfinity/principal": "^0.10.2",
-    "@psychedelic/sonic-js": "../sonic-js",
+    "@psychedelic/sonic-js": "^0.0.3",
     "@reduxjs/toolkit": "^1.7.2",
     "css-loader": "^6.6.0",
     "react": "^17.0.2",
