--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An example of the usage of sonic-js library",
   "main": "index.js",
   "author": "Psychedelic Team",
-  "license": "GLP-3.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "@dfinity/principal": "^0.10.2",
     "@psychedelic/sonic-js": "../sonic-js",
