--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@dfinity/principal": "^0.10.2",
-    "@psychedelic/sonic-js": "0.2.1",
+    "@psychedelic/sonic-js": "0.3.3",
     "@reduxjs/toolkit": "^1.7.2",
     "css-loader": "^6.6.0",
     "react": "^17.0.2",
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
+    "serve": "^13.0.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
@@ -39,6 +40,9 @@
     "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
-    "dev": "webpack-cli serve --open --config webpack.js"
+    "dev": "webpack-cli serve --open --config webpack.js",
+    "build": "webpack --config webpack.js",
+    "prod": "serve dist"
   }
 }
+
